fixing alignment-input form stefan "mäny-föx"

--- a/TerrificNet.Sample/components/modules/Nav/css/nav.less
+++ b/TerrificNet.Sample/components/modules/Nav/css/nav.less
@@ -23,12 +23,6 @@
 					color: @link-state-active;
 				}
 			}
-
-			&:last-child {
-				a {
-					padding-right: 0;
-				}
-			}
 		}
 	}
 	
